--- a/dashboard.html
+++ b/dashboard.html
@@ -7,9 +7,9 @@
 <link rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
 <style>
-  html, body { margin:0; height:100% }
+  html,body { margin:0; height:100% }
   #bar {
-    display:flex; gap:0.5rem; align-items:center;
+    display:flex; align-items:center; gap:0.6rem;
     padding:0.5rem; background:#fafafa;
     box-shadow:0 1px 3px rgba(0,0,0,0.1);
     font:15px system-ui,Arial;
@@ -17,8 +17,6 @@
   #map { height:calc(100% - 52px) }
   select, button { padding:0.4rem 0.6rem; font-size:15px }
   #msg { margin-left:auto; font-style:italic; color:#555 }
-
-  /* tooltip */
   .leaflet-tooltip.permanent {
     background:rgba(255,255,255,0.9);
     border:1px solid #3887BE;
@@ -54,12 +52,12 @@
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
 window.addEventListener('load', () => {
-  const API_URL   = 'https://script.google.com/macros/s/AKfycbw5dqnvTfMuMPjIkdWapz7HC9k15NiKImjhkMtPa1NymMuvtZcsf9gkfZ4BWtG2q8KkcA/exec';
+  const API_URL   = 'https://script.google.com/macros/s/AKfycbw5dqnvTfMuMPjIkdWapz7HC9k15NiKImjhkMtPa1NymMuvtZcsf9gkfZ4BWtG2q8KkcA/exec'; // thay bằng URL của anh
   const AUTO_MS   = 60_000;
   const $         = id => document.getElementById(id);
   const msg       = t  => $('msg').textContent = t;
 
-  // setup map
+  // Khởi tạo map
   const map     = L.map('map').setView([9.5,106.4],7);
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
     attribution:'© OpenStreetMap'
@@ -74,11 +72,11 @@ window.addEventListener('load', () => {
     }
     const selUnit  = $('unit').value || null;
     const selShift = $('shift').value || null;
-    const latest   = {};     // emp → record
+    const latest   = {};
     const now      = Date.now();
 
     data.rows.forEach(r => {
-      // r: {timestamp, unit, emp, shift, lat, lon}
+      // r = {timestamp, unit, emp, shift, lat, lon}
       if (selUnit  && r.unit  !== selUnit)  return;
       if (selShift && r.shift !== selShift) return;
       const ts = new Date(r.timestamp).getTime();
@@ -108,20 +106,20 @@ window.addEventListener('load', () => {
     }
   };
 
-  // load via JSONP
+  // Hàm load dữ liệu qua JSONP
   function load(){
     msg('Đang tải…');
     document.querySelectorAll('script[data-jsonp]').forEach(s=>s.remove());
     const scr = document.createElement('script');
-    const cb  = 'updateCrew';
-    scr.src     = API_URL
-                + '?t=' + Date.now()
-                + '&callback=' + cb;
     scr.dataset.jsonp = '1';
+    scr.src = API_URL
+            + '?list=all'
+            + '&callback=updateCrew'
+            + '&t=' + Date.now();
     document.body.appendChild(scr);
   }
 
-  // events
+  // Sự kiện UI
   $('reload').onclick  = load;
   $('unit').onchange   = load;
   $('shift').onchange  = load;
