--- a/dashboard.html
+++ b/dashboard.html
@@ -1,112 +1,49 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="utf-8">
-<title>Crew Check-In – Dashboard</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
-<style>
-  html,body{margin:0;height:100%}
-  #bar{display:flex;align-items:center;gap:.6rem;
-       padding:.5rem;background:#fafafa;
-       box-shadow:0 1px 3px rgba(0,0,0,.1);
-       font:15px system-ui,Arial}
-  #map{height:calc(100% - 52px)}
-  select,button{padding:.4rem .6rem;font-size:15px}
-  #msg{margin-left:auto;font-style:italic;color:#555}
-  .leaflet-tooltip.permanent{
-    background:rgba(255,255,255,.9);
-    border:1px solid #3887BE;
-    border-radius:4px;
-    padding:2px 6px;
-    font-size:13px;
-  }
-</style>
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Dashboard Check-In</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"/>
+  <style>body{margin:0;font-family:sans-serif}#controls{padding:1rem;background:#fafafa;display:flex;gap:.5rem;flex-wrap:wrap}select,button{flex:1;padding:.6rem;font-size:1rem}#map{height:calc(100vh-72px)}</style>
 </head>
 <body>
-
-<div id="bar">
-  <label>Đơn vị:</label>
-  <select id="unit">
-    <option value="">— Tất cả —</option>
-    <option>PC_TD</option>
-    <option>PC_TC</option>
-    <option>PC_TB</option>
-  </select>
-
-  <label>Ca:</label>
-  <select id="shift">
-    <option value="">— Tất cả —</option>
-    <option>CA01</option>
-    <option>CA02</option>
-    <option>CA03</option>
-  </select>
-
-  <button id="reload">Refresh</button>
-  <span id="msg"></span>
+<div id="controls">
+  <select id="unit"><option value="">— Đơn vị —</option></select>
+  <select id="ca"><option value="">— Ca trực —</option><option value="CA01">CA01</option><option value="CA02">CA02</option><option value="CA03">CA03</option></select>
+  <button id="view">Xem</button>
 </div>
-
 <div id="map"></div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+<script src="https://unpkg.com/overlapping-marker-spiderfier-leaflet/oms.min.js"></script>
 <script>
-window.addEventListener('load', ()=>{
-  const API = 'https://script.google.com/macros/s/AKfycbw5dqnvTfMuMPjIkdWapz7HC9k15NiKImjhkMtPa1NymMuvtZcsf9gkfZ4BWtG2q8KkcA/exec'; // URL mới
-  const REFRESH_MS = 60000;
-  const $ = id=>document.getElementById(id), msg=t=>$('msg').textContent=t;
-
-  // setup map
-  const map = L.map('map').setView([9.5,106.4],7);
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
-    attribution:'© OpenStreetMap'
-  }).addTo(map);
-  const markers = L.layerGroup().addTo(map);
-
-  window.updateCrew = data=>{
-    markers.clearLayers();
-    if(data.status!=='OK') return msg('API lỗi: '+(data.message||'?'));
-    const selU = $('unit').value||null;
-    const selS = $('shift').value||null;
-    const latest={};
-    data.rows.forEach(r=>{
-      if(selU&&r.unit!==selU) return;
-      if(selS&&r.shift!==selS) return;
-      const t = new Date(r.timestamp).getTime();
-      if(!latest[r.emp]||t>latest[r.emp]._ts)
-        latest[r.emp]=Object.assign({_ts:t},r);
-    });
+const URL='https://script.google.com/macros/s/AKfycbw5dqnvTfMuMPjIkdWapz7HC9k15NiKImjhkMtPa1NymMuvtZcsf9gkfZ4BWtG2q8KkcA/exec';
+const $=id=>document.getElementById(id);
+function jsonp(u,cb){const fn='_cb'+Date.now();window[fn]=d=>{delete window[fn];cb(d)};let s=document.createElement('script');s.src=u+(u.includes('?')?'&':'?')+'callback='+fn;document.body.appendChild(s);}
+jsonp(`${URL}?list=units`,r=>r.status==='OK'&&r.units.forEach(u=>$('unit').add(new Option(u.DienLuc,u.Ma_Dovi))));
+const map=L.map('map').setView([16,106],6);
+L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png',{attribution:'© OSM'}).addTo(map);
+const cluster=L.markerClusterGroup({spiderfyOnMaxZoom:true});map.addLayer(cluster);
+const oms=new OverlappingMarkerSpiderfier(map,{keepSpiderfied:true});
+$('view').onclick=()=>{
+  const u=$('unit').value,c=$('ca').value;
+  if(!u||!c) return alert('Chọn Đơn vị & Ca!');
+  cluster.clearLayers(); oms.clearMarkers();
+  jsonp(`${URL}?Ma_Dovi=${u}&Ca=${c}`,r=>{
+    if(r.status!=='OK'){alert('Lỗi');return;}
     const pts=[];
-    Object.values(latest).forEach(r=>{
-      const la=+r.lat, lo=+r.lon;
-      if(!isFinite(la)||!isFinite(lo)) return;
-      L.marker([la,lo])
-       .bindTooltip(`<b>${r.emp}</b><br>ĐV: ${r.unit}<br>Ca: ${r.shift}`,
-         {permanent:true,direction:'top',offset:[0,-10]})
-       .addTo(markers);
-      pts.push([la,lo]);
+    r.logs.forEach(l=>{
+      const lat=+l.lat,lon=+l.lon;
+      if(isNaN(lat)||isNaN(lon)) return;
+      const m=L.marker([lat,lon]).bindPopup(l.Ten_NV);
+      cluster.addLayer(m); oms.addMarker(m); pts.push([lat,lon]);
     });
-    if(pts.length){
-      map.fitBounds(pts,{padding:[20,20]});
-      msg(`Hiển thị ${pts.length} vị trí • ${new Date().toLocaleTimeString()}`);
-    } else msg('Không có dữ liệu');
-  };
-
-  function load(){
-    msg('Đang tải…');
-    document.querySelectorAll('script[data-jsonp]').forEach(s=>s.remove());
-    const s=document.createElement('script');
-    s.dataset.jsonp='1';
-    s.src=API+'?list=all'+'&callback=updateCrew'+'&t='+Date.now();
-    document.body.appendChild(s);
-  }
-
-  $('reload').onclick=load;
-  $('unit').onchange=load;
-  $('shift').onchange=load;
-  load();
-  setInterval(load,REFRESH_MS);
-});
+    if(pts.length===1) map.setView(pts[0],16);
+    else if(pts.length>1) map.fitBounds(pts);
+  });
+};
 </script>
 </body>
 </html>
