--- a/index.html
+++ b/index.html
@@ -12,7 +12,169 @@
   <!-- IOS support -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <link rel="apple-touch-icon" href="evn_logo.png" sizes="192x192">
+  <link rel="apple-touch-<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Check-In Ca Trực</title>
+  <style>
+    body{font:16px Arial;padding:1rem;background:#f5f5f5}
+    .hidden{display:none}
+    label{display:block;margin:.5rem 0 .2rem}
+    input,select,button{width:100%;padding:.6rem;font-size:1rem;margin:.4rem 0;box-sizing:border-box}
+    button{background:#0078D7;color:#fff;border:none;border-radius:4px;cursor:pointer}
+    button:disabled{background:#aaa;cursor:default}
+    #status1,#status2,#status3{font-weight:bold;text-align:center;height:1.2rem}
+    footer{margin-top:2rem;font-size:0.8rem;color:#555;text-align:center}
+    footer a{color:#0078D7;text-decoration:none}
+  </style>
+</head>
+<body>
+  <h1 style="text-align:center">Check-In Ca Trực</h1>
+
+  <!-- Step 1: Nhập email -->
+  <div id="step1">
+    <label>Email công ty</label>
+    <input type="email" id="email" placeholder="nhanvien@evnspc.vn"/>
+    <button id="sendOtp">Gửi mã OTP</button>
+    <div id="status1"></div>
+  </div>
+
+  <!-- Step 2: Nhập OTP -->
+  <div id="step2" class="hidden">
+    <label>Mã OTP (5 phút hiệu lực)</label>
+    <input type="text" id="otp" placeholder="123456"/>
+    <button id="verifyOtp">Xác thực</button>
+    <div id="status2"></div>
+  </div>
+
+  <!-- Step 3: Form chính -->
+  <div id="step3" class="hidden">
+    <label>Đơn vị
+      <select id="unit"><option value="">— Chọn đơn vị —</option></select>
+    </label>
+    <label>Ca trực
+      <select id="ca">
+        <option value="">— Chọn ca trực —</option>
+        <option value="CA01">CA01</option>
+        <option value="CA02">CA02</option>
+        <option value="CA03">CA03</option>
+      </select>
+    </label>
+    <button id="start" disabled>Bắt đầu ca</button>
+    <div id="status3"></div>
+  </div>
+
+  <footer>
+    &copy;2025 EVN SPC. <a href="terms.html" target="_blank">Điều khoản & Chính sách</a>
+  </footer>
+
+  <script>
+  const API = 'https://script.google.com/macros/s/AKfycbw5dqnvTfMuMPjIkdWapz7HC9k15NiKImjhkMtPa1NymMuvtZcsf9gkfZ4BWtG2q8KkcA/exec';
+
+  const el = id => document.getElementById(id);
+
+  function jsonp(url, cb) {
+    const fn = '_cb' + Date.now();
+    window[fn] = data => { delete window[fn]; cb(data); };
+    const s = document.createElement('script');
+    s.src = url + (url.includes('?') ? '&' : '?') + 'callback=' + fn;
+    document.body.appendChild(s);
+  }
+
+  function setStatus(step, msg, cls) {
+    const st = el('status' + step);
+    st.textContent = msg;
+    st.className = cls || '';
+  }
+
+  // Step 1: Gửi OTP
+  el('sendOtp').onclick = () => {
+    const email = el('email').value.trim();
+    if (!email) return setStatus(1, 'Nhập email', 'err');
+    setStatus(1, 'Đang gửi…');
+    jsonp(`${API}?action=sendOtp&email=${encodeURIComponent(email)}`, res => {
+      if (res.status === 'OK') {
+        setStatus(1, 'Mã đã gửi', 'ok');
+        el('step1').classList.add('hidden');
+        el('step2').classList.remove('hidden');
+      } else {
+        setStatus(1, '❌ ' + res.message, 'err');
+      }
+    });
+  };
+
+  // Step 2: Xác thực OTP
+  el('verifyOtp').onclick = () => {
+    const email = el('email').value.trim();
+    const otp   = el('otp').value.trim();
+    if (!otp) return setStatus(2, 'Nhập OTP', 'err');
+    setStatus(2, 'Đang xác thực…');
+    jsonp(`${API}?action=verifyOtp&email=${encodeURIComponent(email)}&otp=${encodeURIComponent(otp)}`, res => {
+      if (res.status === 'OK') {
+        setStatus(2, 'Xác thực OK', 'ok');
+        el('step2').classList.add('hidden');
+        el('step3').classList.remove('hidden');
+        loadUnits(email);
+      } else {
+        setStatus(2, '❌ ' + res.message, 'err');
+      }
+    });
+  };
+
+  // Load Đơn vị sau OTP
+  function loadUnits(email) {
+    jsonp(`${API}?list=units&email=${encodeURIComponent(email)}`, res => {
+      if (res.status === 'OK') {
+        res.units.forEach(u => el('unit').add(new Option(u.DienLuc, u.Ma_Dovi)));
+      }
+    });
+  }
+
+  // Bật nút Start khi chọn đủ
+  el('unit').onchange = el('ca').onchange = () => {
+    el('start').disabled = !(el('unit').value && el('ca').value);
+  };
+
+  // Step 3: Bắt đầu/Kết thúc ca
+  let tracking = false, timerId = null;
+  el('start').onclick = () => {
+    const email = el('email').value.trim();
+    const unit  = el('unit').value;
+    const ca    = el('ca').value;
+
+    if (!tracking) {
+      tracking = true;
+      el('start').textContent = 'Kết thúc ca';
+      el('unit').disabled = el('ca').disabled = true;
+      sendLoc(email, unit, ca);
+      timerId = setInterval(() => sendLoc(email, unit, ca), 15000);
+    } else {
+      tracking = false;
+      el('start').textContent = 'Bắt đầu ca';
+      clearInterval(timerId);
+      setStatus(3, 'Đã dừng', '');
+      el('unit').disabled = el('ca').disabled = false;
+    }
+  };
+
+  function sendLoc(email, unit, ca) {
+    navigator.geolocation.getCurrentPosition(pos => {
+      const lat = pos.coords.latitude, lon = pos.coords.longitude;
+      jsonp(
+        `${API}?action=checkin&email=${encodeURIComponent(email)}` +
+        `&Ma_Dovi=${unit}&Ca=${ca}&lat=${lat}&lon=${lon}`,
+        res => setStatus(3, res.status==='OK'?'✅ OK':'❌ '+res.message, res.status==='OK'?'ok':'err')
+      );
+    }, err => {
+      setStatus(3, '❌ GPS: ' + err.message, 'err');
+    }, { enableHighAccuracy:true, timeout:20000 });
+  }
+  </script>
+</body>
+</html>
+icon" href="evn_logo.png" sizes="192x192">
 
   <style>
     body { font-family: sans-serif; margin:0; padding:20px; background:#f5f5f5; }
